# hash-dumper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TestingDumper.save  dump_bootkey.c  dump_bootkey.h  example.c  functional.c  functional.h  hash_dump.c  hash_dump.h  hive.c  hive.h  main.c
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md  suggest-feature.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  feature_template.md
src/: arg_parser.c  arg_parser.h  crypto.c  crypto.h  dump_bootkey.c  dump_bootkey.h  dump_hashes.c  dump_hashes.h  dump_hives.c  dump_hives.h  example.c.bak  functional.c  functional.h  hash_dump.c  hash_dump.h  hive.c  hive.h  main.c
